--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -11,6 +11,19 @@
     </div>
   <% end %>
 
+
+    <div class="field">
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
+  </div>
+  <div class="field">
+    <%= f.label :catagory %><br>
+    <%= f.text_field :catagory %>
+  </div>
+  <div class="field">
+    <%= f.label :price %><br>
+    <%= f.text_field :price %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
