customer show view created

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -11,6 +11,11 @@
     </div>
   <% end %>
 
+  <!--  
+  #CustomerID (FK)
+  #Menu Date
+-->
+
   <div class="actions">
     <%= f.submit %>
   </div>
