--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -11,7 +11,28 @@
     </div>
   <% end %>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+     <div class="field">
+        <%= f.label :email %><br>
+        <%= f.text_field :email %>
+        </div>
+        <div class="field">
+          <%= f.label :first_name %><br>
+          <%= f.text_field :first_name %>
+        </div>
+        <div class="field">
+          <%= f.label :last_name %><br>
+          <%= f.text_field :last_name %>
+        </div>
+          <div class="field">
+          <%= f.label :st_address %><br>
+          <%= f.text_field :st_address %>
+        </div>
+        <div class="field">
+          <%= f.label :zip_code %><br>
+          <%= f.text_field :zip_code %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit %>
+        </div>
+      <% end %>
