--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,4 +1,29 @@
 <p id="notice"><%= notice %></p>
 
+<p>
+  <strong>First Name:</strong>
+  <%= @customer.first_name %>
+</p>
+
+<p>
+  <strong>Last Name:</strong>
+  <%= @customer.last_name %>
+</p>
+
+<p>
+  <strong>Email:</strong>
+  <%= @customer.email %>
+</p>
+
+<p>
+  <strong>Street Address:</strong>
+  <%= @customer.st_address %>
+</p>
+
+<p>
+  <strong>Zip:</strong>
+  <%= @customer.zip_code %>
+</p>
+
 <%= link_to 'Edit', edit_customer_path(@customer) %> |
 <%= link_to 'Back', customers_path %>
